{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 34,
  "lineage": "2a3044e2-beaf-c496-fc53-4f5329c31342",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:700759161838:loadbalancer/app/lotus-front-alb/aec88de57f383333",
            "arn_suffix": "app/lotus-front-alb/aec88de57f383333",
            "dns_name": "lotus-front-alb-2097211598.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:700759161838:loadbalancer/app/lotus-front-alb/aec88de57f383333",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lotus-front-alb",
            "security_groups": [
              "sg-0aefbf2024230c90f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029c98ff8361a274e"
              },
              {
                "subnet_id": "subnet-0f3a0934286846776"
              }
            ],
            "subnets": [
              "subnet-029c98ff8361a274e",
              "subnet-0f3a0934286846776"
            ],
            "tags": {
              "Name": "lotus-front-alb",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.front-alb-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:700759161838:loadbalancer/app/lotus-internal-alb/97cbe32decbb1d2c",
            "arn_suffix": "app/lotus-internal-alb/97cbe32decbb1d2c",
            "dns_name": "internal-lotus-internal-alb-1276176761.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:700759161838:loadbalancer/app/lotus-internal-alb/97cbe32decbb1d2c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lotus-internal-alb",
            "security_groups": [
              "sg-06d5dd7a6c3fd940f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08facc571ceaa59b3"
              },
              {
                "subnet_id": "subnet-0abbb1748f566a787"
              }
            ],
            "subnets": [
              "subnet-08facc571ceaa59b3",
              "subnet-0abbb1748f566a787"
            ],
            "tags": {
              "Name": "lotus-internal-alb",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.internal-alb-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public-routing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0ebda607aa7c0f268",
            "id": "rtb-0ebda607aa7c0f268",
            "owner_id": "700759161838",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1095e4a1cc40bad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lotus-public-routing",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0eea55adf3d4a7891",
            "public_dns": "ec2-15-164-20-182.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.20.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lotus-nat-eip",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a1095e4a1cc40bad",
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-igw",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eea55adf3d4a7891",
            "id": "nat-0b721491cdcd03507",
            "network_interface_id": "eni-07afcb466e33f1477",
            "private_ip": "192.168.0.114",
            "public_ip": "15.164.20.182",
            "subnet_id": "subnet-0f3a0934286846776",
            "tags": {
              "Name": "lotus-nat",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-048c8a8153c97cb75",
            "owner_id": "700759161838",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b721491cdcd03507",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lotus-private-routing",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cd8ff43bd4f2e30",
            "route_table_id": "rtb-048c8a8153c97cb75",
            "subnet_id": "subnet-06e2b705b5635a935"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-routing",
            "aws_subnet.db-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0850762681d6342ea",
            "route_table_id": "rtb-048c8a8153c97cb75",
            "subnet_id": "subnet-0fcf6dc2ee31e9a0c"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-routing",
            "aws_subnet.db-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0577d47122d10bdc2",
            "route_table_id": "rtb-048c8a8153c97cb75",
            "subnet_id": "subnet-08facc571ceaa59b3"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-routing",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04148abec06addac4",
            "route_table_id": "rtb-048c8a8153c97cb75",
            "subnet_id": "subnet-0abbb1748f566a787"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-routing",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b1fda4f59f75a1e",
            "route_table_id": "rtb-0ebda607aa7c0f268",
            "subnet_id": "subnet-0f3a0934286846776"
          },
          "dependencies": [
            "aws_default_route_table.public-routing",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845ad83699fc5a5a",
            "route_table_id": "rtb-0ebda607aa7c0f268",
            "subnet_id": "subnet-029c98ff8361a274e"
          },
          "dependencies": [
            "aws_default_route_table.public-routing",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:security-group/sg-01c979524612b7bc3",
            "description": "Database Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c979524612b7bc3",
            "ingress": [],
            "name": "lotus-db-sg",
            "name_prefix": null,
            "owner_id": "700759161838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lotus-db-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front-alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:security-group/sg-0aefbf2024230c90f",
            "description": "Frontend Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aefbf2024230c90f",
            "ingress": [],
            "name": "lotus-front-alb-sg",
            "name_prefix": null,
            "owner_id": "700759161838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lotus-front-alb-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:security-group/sg-06d5dd7a6c3fd940f",
            "description": "Internal Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d5dd7a6c3fd940f",
            "ingress": [],
            "name": "lotus-internal-alb-sg",
            "name_prefix": null,
            "owner_id": "700759161838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lotus-internal-alb-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:security-group/sg-054043cf698789b8a",
            "description": "WAS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054043cf698789b8a",
            "ingress": [],
            "name": "lotus-was-sg",
            "name_prefix": null,
            "owner_id": "700759161838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lotus-was-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:security-group/sg-0e856ef8e3d733844",
            "description": "WEB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e856ef8e3d733844",
            "ingress": [],
            "name": "lotus-web-sg",
            "name_prefix": null,
            "owner_id": "700759161838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lotus-web-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2459713308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-054043cf698789b8a",
            "self": false,
            "source_security_group_id": "sg-06d5dd7a6c3fd940f",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.internal-alb-sg",
            "aws_security_group.was-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_couchbase",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8091,
            "id": "sgrule-3689406051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c979524612b7bc3",
            "self": false,
            "source_security_group_id": "sg-054043cf698789b8a",
            "to_port": 8091,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.db-sg",
            "aws_security_group.was-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_alb_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-569380801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aefbf2024230c90f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.front-alb-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_alb_http_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1212502825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aefbf2024230c90f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.front-alb-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_alb_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3833444508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aefbf2024230c90f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.front-alb-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_alb_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2492105300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d5dd7a6c3fd940f",
            "self": false,
            "source_security_group_id": "sg-0e856ef8e3d733844",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.internal-alb-sg",
            "aws_security_group.web-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_alb_app_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8090,
            "id": "sgrule-3041071525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06d5dd7a6c3fd940f",
            "self": false,
            "source_security_group_id": "sg-0e856ef8e3d733844",
            "to_port": 8090,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.internal-alb-sg",
            "aws_security_group.web-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-56231778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e856ef8e3d733844",
            "self": false,
            "source_security_group_id": "sg-0aefbf2024230c90f",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.front-alb-sg",
            "aws_security_group.web-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:subnet/subnet-06e2b705b5635a935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.20.0/24",
            "id": "subnet-06e2b705b5635a935",
            "map_public_ip_on_launch": false,
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-db-a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:subnet/subnet-0fcf6dc2ee31e9a0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.21.0/24",
            "id": "subnet-0fcf6dc2ee31e9a0c",
            "map_public_ip_on_launch": false,
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-db-c",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:subnet/subnet-08facc571ceaa59b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-08facc571ceaa59b3",
            "map_public_ip_on_launch": false,
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-private-a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:subnet/subnet-0abbb1748f566a787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-0abbb1748f566a787",
            "map_public_ip_on_launch": false,
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-private-c",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:subnet/subnet-0f3a0934286846776",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0f3a0934286846776",
            "map_public_ip_on_launch": false,
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-public-a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:subnet/subnet-029c98ff8361a274e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-029c98ff8361a274e",
            "map_public_ip_on_launch": false,
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-public-c",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0dc5c18b609712402"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:700759161838:vpc/vpc-0dc5c18b609712402",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09b906c4ebf2cab1b",
            "default_route_table_id": "rtb-0ebda607aa7c0f268",
            "default_security_group_id": "sg-0b3144482ce5d0836",
            "dhcp_options_id": "dopt-59ff7632",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dc5c18b609712402",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ebda607aa7c0f268",
            "owner_id": "700759161838",
            "tags": {
              "Name": "lotus-vpc",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}